[project]
name = "bushido"
version = "0.1.0"
description = "Track Trainings and Study Time"
authors = [
    {name = "Noe Javet", email = "np.javet@gmail.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "textual[syntax] (>=6.2.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "xarray (>=2025.9.1,<2026.0.0)",
    "platformdirs (>=4.4.0,<5.0.0)",
    "textual-image (>=0.8.4,<0.9.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
packages = ["bushido", "tests"]
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true
pretty = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]

[tool.uv.workspace]
members = [
    "bushido",
]

