[project]
name = "bushido"
version = "0.1.0"
description = "Track Trainings and Study Time"
authors = [
    {name = "Noe Javet", email = "np.javet@gmail.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "platformdirs>=4.9.6",
    "sqlalchemy>=2.0.49",
    "textual-image>=0.12.0",
    "textual[syntax]>=8.2.5",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
packages = ["bushido", "tests"]
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true
pretty = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]

[tool.uv.workspace]
members = [
    "bushido",
]

