[project]
name = "bushido"
version = "0.1.0"
description = "Track Trainings and Study Time"
authors = [
    {name = "Noe Javet", email = "np.javet@gmail.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "platformdirs>=4.9.6",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "textual-image>=0.12.0",
    "textual[syntax]>=8.2.5",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "textual-dev>=1.8.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
packages = ["bushido", "tests"]
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true
pretty = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[tool.uv.workspace]
members = [
    "bushido",
]


[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/bushido']

[project.scripts]
bushido = "bushido.main:main"

